WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
242795
In iOS 16 beta 20A5312j, Chrome 103 calls getUserMedia() will get black video
https://bugs.webkit.org/show_bug.cgi?id=242795
Summary
In iOS 16 beta 20A5312j, Chrome 103 calls getUserMedia() will get black video
Yuwei Zhang
Reported
2022-07-15 01:49:14 PDT
Summary: In iOS 16 beta 20A5312j, Chrome 103 calls getUserMedia() will get black video. Tested devices: Bug is reproducible on: -iPhone 12 | iOS 16 Beta 20A5312j Bug is NOT reproducible on: -iPhone 13 | iOS 15.5 Steps: 1. open
https://webrtc.github.io/samples/src/content/getusermedia/gum/
with Chrome/firefox/other apps' webviews. 2. click Open Camera. Actual result: Black video Expected result: Video is available for WebRTC call from iOS User who has iOS 16 version installed on the mobile device. Reproducibility: 100% ----------------------------------------------------------------------------------- I noticed that the 20A5303i version fixes the getUserMedia black screen in safari. Some of my users use chrome/firefox for WebRTC calls on iOS, or use other apps' webviews. It seems like there are still some issues with WKWebview here that cause black video problems.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-07-15 17:38:57 PDT
<
rdar://problem/97102894
>
youenn fablet
Comment 2
2022-07-18 09:39:33 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2512
EWS
Comment 3
2022-07-19 00:13:40 PDT
Committed
252591@main
(19a6a3753222): <
https://commits.webkit.org/252591@main
> Reviewed commits have been landed. Closing PR #2512 and removing active labels.
Alexey Proskuryakov
Comment 4
2022-07-25 13:09:03 PDT
***
Bug 243121
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug