In iOS 16 beta 20A5312j, Chrome 103 calls getUserMedia() will get black video https://bugs.webkit.org/show_bug.cgi?id=242795 rdar://problem/97102894

Reviewed by Jer Noble.

* Source/WebCore/platform/mediastream/mac/AVVideoCaptureSource.mm:
(WebCore::AVVideoCaptureSource::setupSession):
WKWebView applications may not always have an identity due to a lower level bug.
In that case, we can capture using the previous API without identity.
Add logging to ensure we notice that we do not provide identity.

Canonical link: https://commits.webkit.org/252591@main